--- a/public/chat/styles.css
+++ b/public/chat/styles.css
@@ -144,56 +144,14 @@ p {
   }
 }
 
-@media screen and (min-height: 1440px){
-	#header {
-		height: 150px;
-		font-size: 3em;
-	}
+@media screen and (max-width: 950px){
 
-	#chat-window {
-		height: calc(100% - 300px);
-	}
-
-	.bubble-container {
-		margin-bottom: 6px;
-	}
-
-	.bubble {
-		font-size: 3em;
-		min-width: 3%;
-		min-height: 42px;
-		max-width: 80%;
-		margin-left: 30px;
-		margin-right: 30px;
-		padding: 15px;
-		border-radius: 18px;
-	}
-
-	#feedback {
-		padding: 24px 0px;
-	  margin: 0 60px;
-		font-size: 3em;
-	}
-
-  #footer {
-		height: 150px;
-	}
-
-	#message {
-		margin: 20px;
-		padding-left: 50px;
-		font-size: 3em;
-		border-radius: 100px;
-		height: calc(100% - 46px);
-		width: calc(100% - 66px);
+  #message {
+		border-radius: 50px;
 	}
 
 	#send {
-		margin: 20px;
-		width: 250px;
-		font-size: 2.5em;
-		border-radius: 75px;
-		height: calc(100% - 40px);
+		border-radius: 50px;
 	}
 
 }
