--- a/public/chat/styles.css
+++ b/public/chat/styles.css
@@ -74,7 +74,7 @@ p {
 	padding: 5px;
 	background-color: pink;
 	border-radius: 6px;
-	word-break: break-all;
+	word-break: normal;
 }
 
 .stranger {
